--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <header>
-  <h1>The Web Fundementals Palace</h1>
+  <h1 id="top">The Web Fundementals Palace</h1>
   <body></body>
   <p>Hover over the family members below and take a peak into the lives of those living at the Web Fundementals Palace.</p>
 </header>
@@ -59,6 +59,7 @@
      </article>
     </section>
     
+    <footer id="#top">jump</footer>
 </main>
 </body>
 </html>
